tests/fixtures/valid/multi/unit_import_two_aliases/src/app/units_b.gcl
pub unit mile: Length = 1609.0 m;
