tests/fixtures/invalid/const_node_runtime_unit.gcl
unit mile: Length = 1609.344 m;
const node distance: Length = 1.0 mile;
